--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,29 @@
-name: Generate 3D Contribution Graph
+name: Generate snake animation
 
 on:
+  schedule:
+    - cron: "0 0 * * *"  # 매일 자정
   workflow_dispatch:
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Generate GitHub contribution snake
+        uses: Platane/snk@v3
         with:
-          python-version: '3.x'
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake.gif
 
-      - name: Install dependencies
-        run: |
-          pip install -r https://raw.githubusercontent.com/yoshi389111/github-profile-3d-contrib/main/requirements.txt
-
-      - name: Generate graph
-        run: |
-          git clone https://github.com/yoshi389111/github-profile-3d-contrib.git
-          cd github-profile-3d-contrib
-          python main.py --user ${{ github.repository_owner }}
-          cp -r out ../profile-3d-contrib
+      - name: Push to the output branch
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
