--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,26 +2,30 @@ name: generate
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 0 * * *"  # 매일 00:00 UTC 실행
+  workflow_dispatch:     # 수동 실행도 가능하게 설정
 
 permissions:
-  contents: write
+  contents: write        # output 브랜치에 push하려면 필수
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Generate GitHub contribution snake
-        uses: Platane/snk@master
+        uses: Platane/snk@v3
         with:
           github_user_name: hyeon3233
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+
+      - name: List dist directory (디버깅용, 나중에 제거 가능)
+        run: ls -R dist
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
